Bug 133041 - Sidebar: List style is not added back to hierarchy after undoing and redoing it (see comment 7)
Summary: Sidebar: List style is not added back to hierarchy after undoing and redoing ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0 target:24.8.2
Keywords:
Depends on:
Blocks: Sidebar-Styles Undo-Redo
  Show dependency treegraph
 
Reported: 2020-05-14 18:25 UTC by Telesto
Modified: 2024-09-17 07:50 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-05-14 18:25:46 UTC
Description:
Sidebar: Style is not added back to hierarchy after deleting and redoing it (character style)

Steps to Reproduce:
1. Open Writer
2. Go to Sidebar - Styles and make sure Hierarchical is choosen
3. right click on a style - new -> a new style is added a a child
4. Undo
5. Redo

Actual Results:
The style doesn't show

Expected Results:
Should show up


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.0.0.alpha1+ (x64)
Build ID: f9790da286f2d2fa47f1748f8cfa6172c6622ca3
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win; 
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2020-05-14 18:27:15 UTC
Also frame & list styles
Comment 2 Jim Raykowski 2020-05-15 04:01:31 UTC
I repro for new Paragraph and Frame styles inherited from -None- but not for Character or Page style inherited from -None-. For List styles undo works for me but not redo.

Version: 7.0.0.0.alpha0+
Build ID: cc630b4430a5654df02a0ede1eb4b9c8ad8420ce
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: x11; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 3 Jim Raykowski 2020-05-15 04:09:41 UTC
My mistake, I repro for character style as well. The only one that seems to work correct for me is Page style.
Comment 4 Telesto 2020-05-15 10:32:52 UTC
@Jim
As precaution.. if you consider working on this bug - could please wait a few days.. have a question related to this for UX
Comment 5 QA Administrators 2022-10-15 03:39:48 UTC Comment hidden (obsolete)
Comment 6 Buovjaga 2024-09-10 15:13:40 UTC
(In reply to Jim Raykowski from comment #2)
> I repro for new Paragraph and Frame styles inherited from -None- but not for
> Character or Page style inherited from -None-. For List styles undo works
> for me but not redo.
> 
> Version: 7.0.0.0.alpha0+
> Build ID: cc630b4430a5654df02a0ede1eb4b9c8ad8420ce
> CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: x11; 
> Locale: en-US (en_US.UTF-8); UI-Language: en-US
> Calc: threaded

I don't repro with the description steps or this, setting None as the inheritance upon creation. However, undoing a child of None only changes its name to Untitled1 and does not remove it. I don't repro the description steps for char styles even in 7.0, though.

Please re-test.

Arch Linux 64-bit
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 880096c3a970389de9f1272509d2d03df046570a
CPU threads: 8; OS: Linux 6.10; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 10 September 2024
Comment 7 Jim Raykowski 2024-09-10 18:06:31 UTC
With:

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 472644f5a30b47f7855ee988a207bab8960e954d
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

I no longer repro for character style or frame style. List style still behaves for me as before. Undoing the new list style removes it but redoing immediately after does not add it back.
Comment 8 Commit Notification 2024-09-13 23:04:51 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fb39ae1bc7e4b1cbfc3108efca52ec310faf7363

Resolves tdf#133041 New list style is not added back after

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Buovjaga 2024-09-14 14:15:05 UTC
Verified, thanks.

Arch Linux 64-bit
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: fb39ae1bc7e4b1cbfc3108efca52ec310faf7363
CPU threads: 8; OS: Linux 6.10; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 14 September 2024
Comment 10 Commit Notification 2024-09-17 07:50:30 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/e3c06470b44c6e7536083841b8881748e8f5e047

Resolves tdf#133041 New list style is not added back after

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.