Resolves tdf#133041 New list style is not added back after

undoing and then redoing it

by following the approach used by commit
c4d82fc21c5e155472f6a30244b3fce806ada85c

Change-Id: I09c877aecdcf49d4be5451e247bf1010856c2d39
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173312
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>